--- a/src/app/shared/pages/components/not-found/not-found.component.html
+++ b/src/app/shared/pages/components/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<section class="bg-white dark:bg-gray-900">
+<section class="flex items-center h-screen w-full bg-white dark:bg-gray-900">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="mx-auto max-w-screen-sm text-center">
             <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-blue-600 dark:text-blue-500">404</h1>
