--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<div class="mt-20 ml-4">
-    <p *ngFor="let number of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">home works!! {{ number }}</p>
-</div>
+<section>
+    <div class="mt-20 ml-4">
+        <p *ngFor="let number of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">home works!! {{ number }}</p>
+    </div>
+</section>
