--- a/src/app/pages/users/profile/profile.component.html
+++ b/src/app/pages/users/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<section>
+    <div class="mt-20 ml-4">
+        <p *ngFor="let number of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">Profile works!! {{ number }}</p>
+    </div>
+</section>
